fix: build artifacts fs; bump 0.0.4

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "monadio",
-	"version": "0.0.3",
+	"version": "0.0.4",
 	"description": "A little library that provides useful and smartly-typed monads for TypeScript.",
-	"main": "dist/lib/index.js",
+	"main": "dist/index.js",
 	"scripts": {
 		"watch": "tsc -w",
 		"build": "tsc",
