feat: establish a type-testing suite and write tests for narrow-discriminate

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,10 @@
     "outDir": "dist",
   },
   "include": [
-    "src"
+    "src",
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "test"
   ]
 }
