--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"watch": "tsc -w",
 		"build": "tsc",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "tsc --noEmit"
 	},
 	"keywords": [
 		"monad",
