--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "ES2017",
     "module": "ESNext",
     "lib": [
       "ESNext",
-      "DOM"
     ],
     "moduleResolution": "node",
-    "isolatedModules": false,
+    "isolatedModules": true,
     "strict": true,
     "pretty": true,
-    "newLine": "lf",
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true,
-    "importHelpers": true,
-    "removeComments": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
@@ -28,7 +18,7 @@
     "outDir": "dist",
   },
   "include": [
-    "src",
+    "lib",
   ],
   "exclude": [
     "node_modules",
