--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
-    "module": "ESNext",
-    "lib": [
-      "ESNext",
-    ],
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM"],
     "moduleResolution": "node",
     "isolatedModules": true,
     "strict": true,
@@ -14,14 +11,8 @@
     "forceConsistentCasingInFileNames": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "outDir": "dist",
+    "noImplicitReturns": true
   },
-  "include": [
-    "lib",
-  ],
-  "exclude": [
-    "node_modules",
-    "test"
-  ]
+  "include": ["lib"],
+  "exclude": ["node_modules", "test"]
 }
