fix: update build command to use pnpm for consistency

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "watch": "tsc -w",
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "build": "npm run build:cjs && npm run build:esm",
+    "build": "pnpm run build:cjs && pnpm run build:esm",
     "test": "tsc --noEmit"
   },
   "keywords": [
