--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
   "name": "monadio",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "A little library that provides useful and smartly-typed monads for TypeScript.",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "require": "./dist/cjs/index.js",
-      "import": "./dist/esm/index.js"
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
     }
   },
   "scripts": {
     "watch": "tsc -w",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build": "pnpm run build:cjs && pnpm run build:esm",
+    "build": "pnpm build:js && pnpm build:type",
+    "build:js": "node build.js",
+    "build:type": "tsc",
     "test": "tsc --noEmit"
   },
   "keywords": [
@@ -35,6 +37,7 @@
   "license": "MIT",
   "packageManager": "pnpm@9.4.0",
   "devDependencies": {
+    "esbuild": "^0.24.0",
     "typescript": "^5.5.0"
   },
   "files": [
